<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.gta.demo.HelpMenu"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="How to:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="30sp" />

        <Button
            android:text="@string/helpEnableBtAndConnectPi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNhelpBluetoothPi"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:gravity="center_vertical"
            android:background="@android:color/transparent" />
        <Button
            android:text="@string/helpInstallPi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNhelpInstallPi"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:gravity="center_vertical"
            android:background="@android:color/transparent" />

        <Button
            android:text="@string/helpAddPlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BTNhelpAddPlant"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:gravity="center_vertical"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <Button
        android:text="@string/AskUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BTNhelpAskus"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

</RelativeLayout>
