<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.gta.demo.settings"
    android:gravity="top">

    <Switch
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/switch3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Switch
        android:text="@string/raspberry_leds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/switch5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:text=">"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentEnd="true"/>

    <Switch
        android:text="@string/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="@string/raspberry_wifi"
        android:layout_width="wrap_content"
        android:id="@+id/textView6"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="sans-serif"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/switch2"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:id="@+id/textView7"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
